# fastapi-alembic-sqlmodel

./: .gitignore  README.md  database.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f091d8d7589c_init_expense_tracker.py
app/: main.py
app/models/: database.py
app/router/: categories.py  expenses.py
app/schema/: category.py  expense.py
